--- a/css/base.css
+++ b/css/base.css
@@ -1265,7 +1265,7 @@ button {
     line-height: 1.5;
 }
 .footer-image {
-    background: url(https://raw.githubusercontent.com/BNDong/Cnblogs-Theme-SimpleMemory/master/img/footer.png) no-repeat 50%;
+    background: url(https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/img/footer.png) no-repeat 50%;
     height: 368px;
     z-index: 1;
     position: absolute;
@@ -3009,7 +3009,7 @@ button {
     /*margin-bottom: 5rem;*/
     text-align: center;
     /*background: #222 url(https://files.cnblogs.com/files/bndong/top_bg4.gif) center center no-repeat;*/
-    background: #222 url(https://raw.githubusercontent.com/BNDong/Cnblogs-Theme-SimpleMemory/master/img/home_top_bg.jpg) center center no-repeat;
+    background: #222 url(https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/img/home_top_bg.jpg) center center no-repeat;
     background-size: cover;
     overflow: hidden;
     position: absolute;
@@ -3230,7 +3230,7 @@ button {
     outline: none;
     cursor: pointer;
     /*background: #000 url(https://raw.githubusercontent.com/BNDong/Cnblogs-Theme-SimpleMemory/master/img/menu_bg.jpeg) 0 -195px no-repeat;*/
-    background: #000 url(https://files.cnblogs.com/files/bndong/me_top_bg.gif) center no-repeat;
+    background: #000 url(https://files-cdn.cnblogs.com/files/fofade/me_top_bg.gif) center no-repeat;
     background-size: 100%;
 }
 
@@ -3816,7 +3816,7 @@ span.cnblogs_code {
     padding: 10px;
     height: 200px;
     position: relative;
-    background: #fff url(https://raw.githubusercontent.com/BNDong/Cnblogs-Theme-SimpleMemory/master/img/comment_bg.jpg) right -65px;
+    background: #fff url(https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/img/comment_bg.jpg) right -65px;
     background-size: 250px;
     background-repeat: no-repeat;
 }
@@ -3860,7 +3860,7 @@ span.cnblogs_code {
 }
 
 .tbCommentBody_bg {
-    background: url('https://files.cnblogs.com/files/bndong/commentHintBg.gif') center center no-repeat;
+    background: url('https://files-cdn.cnblogs.com/files/fofade/commentHintBg.gif') center center no-repeat;
 }
 
 .commentbox_main {
@@ -3887,9 +3887,9 @@ span.cnblogs_code {
 .list .out .icon,.list .inc .icon{width:48px;height:48px;}
 .list .icontd {width:48px;}
 .list .out .icontd{display:none;}
-.list .out .topleft,.list .out .topright,.list .out .bottomleft,.list .out .bottomright,.list .inc .topleft,.list .inc .topright,.list .inc .bottomleft,.list .inc .bottomright{background: url(https://files.cnblogs.com/files/bndong/t_o_bubbles.gif) no-repeat;}
-.list .out .top,.list .out .bottom,.list .inc .top,.list .inc .bottom{background:transparent url(https://files.cnblogs.com/files/bndong/t_o_horizontal.gif) repeat-x;}
-.list .out .left,.list .out .right,.list .inc .left,.list .inc .right{background:transparent url(https://files.cnblogs.com/files/bndong/t_o_vertical.gif) repeat-y;}
+.list .out .topleft,.list .out .topright,.list .out .bottomleft,.list .out .bottomright,.list .inc .topleft,.list .inc .topright,.list .inc .bottomleft,.list .inc .bottomright{background: url(https://files-cdn.cnblogs.com/files/fofade/t_o_bubbles.gif) no-repeat;}
+.list .out .top,.list .out .bottom,.list .inc .top,.list .inc .bottom{background:transparent url(https://files-cdn.cnblogs.com/files/fofade/t_o_horizontal.gif) repeat-x;}
+.list .out .left,.list .out .right,.list .inc .left,.list .inc .right{background:transparent url(https://files-cdn.cnblogs.com/files/fofade/t_o_vertical.gif) repeat-y;}
 
 .list .out .topleft{background-position:left top;height:9px;width:18px;}
 .list .out .topright{background-position:-18px top;height:9px;width:11px;}
