--- a/css/base.css
+++ b/css/base.css
@@ -1265,7 +1265,7 @@ button {
     line-height: 1.5;
 }
 .footer-image {
-    background: url(https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/img/footer.png) no-repeat 50%;
+    background: url(https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes/img/footer.png) no-repeat 50%;
     height: 368px;
     z-index: 1;
     position: absolute;
@@ -3009,7 +3009,7 @@ button {
     /*margin-bottom: 5rem;*/
     text-align: center;
     /*background: #222 url(https://files.cnblogs.com/files/bndong/top_bg4.gif) center center no-repeat;*/
-    background: #222 url(https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/img/home_top_bg.jpg) center center no-repeat;
+    background: #222 url(https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes/img/home_top_bg.jpg) center center no-repeat;
     background-size: cover;
     overflow: hidden;
     position: absolute;
@@ -3816,7 +3816,7 @@ span.cnblogs_code {
     padding: 10px;
     height: 200px;
     position: relative;
-    background: #fff url(https://raw.githubusercontent.com/Fofade/cnblogsThemes/master/img/comment_bg.jpg) right -65px;
+    background: #fff url(https://cdn.jsdelivr.net/gh/Fofade/cnblogsThemes/img/comment_bg.jpg) right -65px;
     background-size: 250px;
     background-repeat: no-repeat;
 }
